--- a/public/css/manageModules/manageUI.css
+++ b/public/css/manageModules/manageUI.css
@@ -50,7 +50,6 @@ body {
           margin-right: 8px;
           padding: 5px 8px; }
         .form-wrapper form ul li input, .form-wrapper form ul li select, .form-wrapper form ul li button, .form-wrapper form ul li a.btn {
-          margin-right: 12px;
           padding: 5px 20px;
           height: 30px; }
         .form-wrapper form ul li a.btn {
@@ -61,6 +60,8 @@ body {
           box-sizing: border-box;
           border: 1px solid #999;
           border-radius: 8px; }
+          .form-wrapper form ul li a.btn:active {
+            background: rgba(0, 0, 0, 0.2); }
         .form-wrapper form ul li select {
           -webkit-appearance: none;
           -ms-appearance: none;
@@ -69,7 +70,7 @@ body {
           text-align: center; }
         .form-wrapper form ul li i.selectIcon {
           position: absolute;
-          right: 15px;
+          right: 5px;
           top: 7.5px;
           width: 15px;
           height: 15px;
