--- a/public/sass/manageModules/manageUI.scss
+++ b/public/sass/manageModules/manageUI.scss
@@ -43,6 +43,7 @@ body{
           padding:5px 8px;
         }
         input,select,button,a.btn{
+          margin-right:12px;
           padding:5px 20px;
           height:30px;
         }
@@ -50,9 +51,6 @@ body{
           @include boxSizing(border-box);
           border:1px solid #999;
           border-radius:8px;
-          &:active{
-            background:rgba(0,0,0,0.2);
-          }
         }
         /*input[type='date'],input[type='time'],input[type='data-time']{
           @include appearance;
@@ -63,7 +61,7 @@ body{
         }
         i.selectIcon{
           position:absolute;
-          right:5px;
+          right:15px;
           top:7.5px;
           width:15px;
           height:15px;
