--- a/public/css/manageModules/manageUI.css
+++ b/public/css/manageModules/manageUI.css
@@ -59,7 +59,12 @@ body {
           -o-box-sizing: border-box;
           box-sizing: border-box;
           border: 1px solid #999;
-          border-radius: 8px; }
+          border-radius: 8px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          -o-user-select: none;
+          user-select: none; }
           .form-wrapper form ul li a.btn:active {
             background: rgba(0, 0, 0, 0.2); }
         .form-wrapper form ul li select {
@@ -84,56 +89,5 @@ body {
 
 button {
   -webkit-tap-highlight-color: #f3f3f3; }
-
-.manage-gride {
-  width: 100%;
-  height: auto;
-  border: 1px solid #ccc;
-  margin-top: 10px; }
-  .manage-gride .button-dock {
-    width: 100%;
-    height: auto;
-    padding: 10px 20px;
-    border-bottom: 1px solid #ccc;
-    -webkit-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    background-color: white; }
-    .manage-gride .button-dock button {
-      padding: 5px 18px;
-      cursor: pointer;
-      margin-right: 10px; }
-  .manage-gride .table {
-    width: 100%;
-    margin-top: 20px;
-    background-color: white; }
-    .manage-gride .table tr {
-      border-top: 1px solid #ccc;
-      height: 30px;
-      line-height: 30px;
-      text-align: center; }
-      .manage-gride .table tr .selectCell {
-        width: 50px;
-        text-align: center; }
-        .manage-gride .table tr .selectCell input[type='checkbox'] {
-          width: 16px;
-          height: 16px;
-          margin: 0;
-          margin-right: 10px;
-          margin-top: 7px;
-          display: inline-block; }
-        .manage-gride .table tr .selectCell input[type='checkbox']:checked {
-          background: white; }
-      .manage-gride .table tr .rowCounterCell {
-        width: 50px; }
-      .manage-gride .table tr td button {
-        -webkit-tap-highlight-color: #f3f3f3;
-        padding: 3px 10px;
-        cursor: pointer;
-        margin-right: 10px; }
-    .manage-gride .table tr.selected td {
-      background: #f3f3f3; }
 
 /*# sourceMappingURL=manageUI.css.map */
