--- a/public/sass/manageModules/manageUI.scss
+++ b/public/sass/manageModules/manageUI.scss
@@ -50,6 +50,7 @@ body{
           @include boxSizing(border-box);
           border:1px solid #999;
           border-radius:8px;
+          @include userSelect(none);
           &:active{
             background:rgba(0,0,0,0.2);
           }
@@ -82,64 +83,4 @@ body{
 button{
    -webkit-tap-highlight-color:#f3f3f3;
 }
-.manage-gride{
-  width:100%;
-  height:auto;
-  border:1px solid #ccc;
-  margin-top:10px;
-  .button-dock{
-    width:100%;
-    height:auto;
-    padding:10px 20px;
-    border-bottom:1px solid #ccc;
-    @include boxSizing(border-box);
-    background-color:white;
-    button{
-      padding:5px 18px;
-      cursor:pointer;
-      margin-right:10px;
-    } 
-  }
-  .table{
-      width:100%;
-      margin-top:20px;
-      background-color:white;
-      tr{
-        border-top:1px solid #ccc;
-        height:30px;
-        line-height:30px;
-        text-align:center;
-        .selectCell {
-          width:50px;
-          text-align:center;
-          input[type='checkbox']{
-              width:16px;
-              height:16px;
-              margin:0;
-              margin-right:10px;
-              margin-top:7px;
-              display:inline-block;
-          }
-          input[type='checkbox']:checked{
-            background:white;
-          }
-        }
-        .rowCounterCell{
-          width:50px;
-        }
-        td{
-          button{
-             -webkit-tap-highlight-color:#f3f3f3;
-             padding:3px 10px;
-             cursor:pointer;
-             margin-right:10px;
-          }
-        }
-      }
-      tr.selected {
-        td{
-          background:#f3f3f3;
-        }
-      }
-  }
-}
+
